--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 body {
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: "Comic Sans MS", sans-serif;
     background-color: #ffe4e9;
     margin: 0;
     padding: 0;
